<resources>
    <string name="app_name">Corona Track</string>
    <string name="label_todays_report">Today\'s Report</string>
    <string name="label_confirmed">Confirmed</string>
    <string name="ex_num">123.123</string>
    <string name="label_recovered">Recovered</string>
    <string name="label_death">Deaths</string>
    <string name="tv_data_source">Data source:\nhttps://covid19.mathdro.id/api</string>
    <string name="title_activity_maps">Map</string>
    <string name="label_read_daily_updates">Read daily updates</string>
    <string name="label_daily_updates">Daily Updates</string>
    <string name="label_add_country">Add Country</string>
    <string name="hint_search_country">Country, City, Province…</string>
    <string name="label_region">Region</string>
    <string name="label_country">Country</string>
    <string name="label_select_country">Select Country</string>
    <string name="label_sub_add_country">Track COVID-19 status by country</string>
    <string name="label_keep_clean">Keep clean</string>
    <string name="label_have_symptoms">Have symptoms?</string>
    <string name="label_sub_have_symptoms">Better ask doctor if you getting this</string>
    <string name="label_sub_keep_clean"><![CDATA[Tips & trick avoid COVID-19]]></string>
</resources>
